[package]
name = "tlv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_serde"
path = "src/test_serde.rs"

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.150"
typetag = "0.2.22"
zerocopy = { version = "0.8.52", features = ["derive"] }

[features]
serde = ["dep:serde"]
default = ["serde"]
