[package]
name = "tlv"
version = "0.1.0"
edition = "2024"


[[test]]
name = "imgdsc"
path = "tests/imgdsc.rs"
required-features = ["serde"]

[[test]]
name = "test_serde"
path = "tests/test_serde.rs"
required-features = ["serde"]

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"], optional = true }
typetag = { version = "0.2.22", optional = true }
zerocopy = { version = "0.8.52", features = ["derive"] }
aligned = "0.4.2"

[dev-dependencies]
serde_json = "1.0.150"
serde_json5 = "0.2.1"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "dep:typetag", "std"]
